@@ -10,7 +10,9 @@
 AUTOMAKE_OPTIONS = gnu
 
 # Subdirectories
-SUBDIRS = doc fastnlotoolkit src pyext
+# SUBDIRS = doc fastnlotoolkit src pyext
+# Need to put documentation together
+SUBDIRS = fastnlotoolkit src pyext
 
 # Provide local m4 macros in dir m4, copy also system-wide macros
 ACLOCAL_AMFLAGS = -I m4 --install
