@@ -1,3 +1,10 @@
+Notes for very first autotools version of fastNLO_toolkit version 2.3.1pre, revision rrrr:
+==========================================================================================
+This is a prerelease for testing, do not distribute!
+Please contact the authors for any questions or problems.
+
+
+
 Notes for very first autotools version of fastNLO_toolkit version 2.1.0, revision 1494:
 =======================================================================================
 
